# advent_of_rust_pico_w

./: Cargo.toml  README.md  build.rs  run.sh
.cargo/: config.toml
scripts/: manual_setup.sh  remote_deploy.ps1  run.sh  setup.sh
src/: lib.rs  solver.rs  tcp_server.rs
src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  mod.rs
src/aoc2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  dayx.rs  mod.rs
src/solvers/: AOCTEST.rs  mod.rs
src/utils/: mod.rs  ram_reporter.rs  sizecheck.rs
